--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<!-- HTML Codes by Quackit.com -->
+<title>
+Sharabesh Ramesh </title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="My website is currently in progress ">
+<style>
+body {background-color:#ffffff;background-image:url(https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiLnqz71NnPAhVI7mMKHTu8Du8QjRwIBw&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FUniversity_of_California%2C_Berkeley&psig=AFQjCNGedzJxjA7eyLtENoyTmDz3Vz7pgg&ust=);background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
+p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+</style>
+</head>
+<body>
+<h1>Experience </h1>
+<p>Enter Info Here</p>
+</body>
+</html>
