--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>
 Sharabesh Ramesh </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="My website is currently in progress ">
+<meta name="description" content="I am currently a computer science student at the University of California Berkeley. ">
 <style>
 body {background-color:#ffffff;background-image:url(https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiLnqz71NnPAhVI7mMKHTu8Du8QjRwIBw&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FUniversity_of_California%2C_Berkeley&psig=AFQjCNGedzJxjA7eyLtENoyTmDz3Vz7pgg&ust=);background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
 h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
@@ -14,6 +14,6 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 </head>
 <body>
 <h1>Experience </h1>
-<p>Enter Info Here</p>
+<p>This is where I will add links to everything else. </p>
 </body>
 </html>
