--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-<!-- HTML Codes by Quackit.com -->
-<title>
-Sharabesh Ramesh </title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="I am currently a computer science student at the University of California Berkeley. ">
-<style>
-body {background-color:#ffffff;background-image:url(https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiLnqz71NnPAhVI7mMKHTu8Du8QjRwIBw&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FUniversity_of_California%2C_Berkeley&psig=AFQjCNGedzJxjA7eyLtENoyTmDz3Vz7pgg&ust=);background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
-h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
-p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
-</style>
-</head>
-<body>
-<h1>Experience </h1>
-<p>This is where I will add links to everything else. </p>
-</body>
-</html>
+<!DOCTYPE <!DOCTYPE html>
+<html> 
+<head> 
+	<div> This is everything </div> 
+	<img class = "someName" src = "PATHNAME">  
+
+
+
+
+
+</head> 
+
+<body> 
+
+
+
+
+
+
+
+
+</body> 
+
+</html> 
