Needs some more formating

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
 					</div>
 					<div class="banner-right-info">
 						<h2>Welcome. I am currently a Computer Science Student at the University of California Berkeley. I've showcased some of my work here, feel free to take a look around. </h2>
-						<p>Donec dolor felis, consectetur eget massa non, mattis euismod est. Nam augue neque, hendrerit nec scelerisque non, ultrices at ligula. Praesent posuere, turpis eget lobortis elementum, ex ante ultricies ligula, sit amet varius lacus dui in magna. Aliquam erat volutpat. Nulla condimentum, enim vitae congue ultrices, nibh erat efficitur sem, vel iaculis lectus eros in turpis. Aliquam venenatis cursus suscipit.</p>
+						<p>I'm going to add more relevant information here/ or something cool when I figure out what that is.</p>
 					</div>
 					<div class="clearfix"> </div>
 					<div class="w3-button">
@@ -578,7 +578,7 @@ $(document).ready(function() {
 	<!-- copyright -->
 	<div class="agileits-w3layouts-footer">
 		<div class="container">
-			<p>© 2016 Creative Resume. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+			<p> Sharabesh Ramesh  <a href="http://github.com/Sharabesh">@Github</a></p>
 		</div>
 	</div>
 	<!-- //copyright -->
