--- a/index.html
+++ b/index.html
@@ -233,6 +233,14 @@ $(document).ready(function() {
 							<h5>Pioneers in Robotics Foundation</h5>
 							<p>I worked with a group on campus to develop Printed Circuit Boards for integration into Robotic development kits. These kits were ultimately designed for local robotics education and competition. </p>
 						</div>
+						<div class="col-md-6 experience-grid experience-grid2">
+						<div class="experience-grid-icon icon-left hvr-radial-out">
+							<i class="fa fa-comments" aria-hidden="true"></i>
+						</div>
+						<div class="experience-grid-info">
+							<h5>BioInformatics Analysis</h5>
+							<p> I am currently working on software to automate protein multi-domain architecture prediction using biologically-founded consensus approaches </p>
+						</div>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
