Updated website to fix all the html errors, alter the maps API, and add some figure captions

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Creative Resume a Personal  Category Flat Bootstrap responsive Website Template | Home :: w3layouts</title>
+<title>Sharabesh Ramesh</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -15,7 +15,7 @@
 <link href="css/owl.theme.css" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="css/cm-overlay.css" />
 <!-- font-awesome icons -->
-<link href="css/font-awesome.css" rel="stylesheet"> 
+<link href="css/font-awesome.css" rel="stylesheet">
 <!-- //font-awesome icons -->
 <!-- font -->
 <link href="//fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet">
@@ -26,20 +26,20 @@
 <!-- menu -->
 <link rel="stylesheet" href="css/main.css">
 <script type="text/javascript" src="js/main.js"></script>
-<!-- //menu --> 
+<!-- //menu -->
 <script>
-$(document).ready(function() { 
+$(document).ready(function() {
 	$("#owl-demo").owlCarousel({
- 
+
 		autoPlay: 3000, //Set AutoPlay to 3 seconds
 		autoPlay:true,
 		items : 3,
 		itemsDesktop : [640,5],
 		itemsDesktopSmall : [414,4]
- 
+
 	});
-	
-}); 
+
+});
 </script>
 </head>
 <body>
@@ -133,7 +133,19 @@ $(document).ready(function() {
 				<div class="col-md-6 wthree-about-left">
 					<h3>About Me</h3>
 					<h4>Looking forwards</h4>
-					<p>I am currently a Computer Science student at the University of California Berkeley. I am always looking for new ways to grow my understanding of computer science through coursework or new projects to work on. I am currently working with the Berkeley Institute for Data Science working on a meta-analysis tool for neuro-imaging literature as well as Lab Assisting for Berkeley’s introductory computer science course.I am currently looking for software developer internships. Please feel free to reach out to me with any leads, questions, or concerns. </p>
+					<p>
+						I am currently a Computer Science student at the
+						University of California Berkeley.
+						I am always looking for new ways to grow my understanding
+						of computer science through coursework or new projects to
+						work on. I am currently working with the Berkeley Institute
+						for Data Science working on a meta-analysis tool for
+						neuro-imaging literature as well as Lab Assisting for
+						Berkeley’s introductory computer science course.
+						I am currently looking for software engineering internships.
+						Please feel free to reach out to me with any leads, questions,
+						or concerns.
+					</p>
 				</div >
 				<div class="col-md-6 wthree-about-right">
 					<h3>Skills</h3>
@@ -142,7 +154,7 @@ $(document).ready(function() {
 						  <section class='wrap'>
 							<div class='wrap_right'>
 							  <div class='bar_group'>
-								<div class='bar_group__bar thin' label='Python' show_values='true' tooltip='true' value='600'></div>
+								<div class='bar_group__bar thin' label='Python' show_values='true' tooltip='true' value='650'></div>
 								<div class='bar_group__bar thin' label='Java' show_values='true' tooltip='true' value='500'></div>
 								<div class='bar_group__bar thin' label='JavaScript' show_values='true' tooltip='true' value='350'></div>
 								<div class='bar_group__bar thin' label='CSS and HTML' show_values='true' tooltip='true' value='450'></div>
@@ -200,7 +212,7 @@ $(document).ready(function() {
 	<div class="experience" id="experience">
 		<div class="container">
 			<div class="w3-agileits-statistics-heading experience-heading">
-				<h3>Work Experience</h3>
+					<h3>Work Experience</h3>
 			</div>
 			<div class="w3-agile-experience-grids">
 				<div class="experience-top-grids">
@@ -210,7 +222,10 @@ $(document).ready(function() {
 						</div>
 						<div class="experience-grid-info">
 							<h5>Backend Web Development with the Berkeley Institute for Data Science</h5>
-							<p>During my year with the Data Science Institute, I've worked with international teams to product a meta-analytics tool for neuroimaging literature. Much of this work has revolved around backend development in Tornado, Database architecture design, and Front-end UI development.</p>
+							<p>During my year with the Data Science Institute, I've worked with international teams to produce a
+							meta-analytics tool for neuroimaging literature. Much of this worked
+							has revolved around backend development in Tornado, Database organization
+							using PostgreSQL and Peewee ORM, and Front-end Development with Jquery,HTML, and CSS</p>
 						</div>
 					</div>
 					<div class="col-md-6 experience-grid experience-grid1">
@@ -219,7 +234,14 @@ $(document).ready(function() {
 						</div>
 						<div class="experience-grid-info">
 							<h5>UC Berkeley Lab Assisting</h5>
-							<p>Over the past year, I've worked with Berkeley's Introductory Computer Science Course (CS61A) to teach general concepts in Computer Science. I've taught Scheme and Python as well as the fundamentals of SQL. </p>
+							<p>
+								Over the past year, I've worked with Berkeley's Introductory Computer
+								Science Course (CS61A) to teach general concepts in Computer Science,
+								Object Oriented Design, Basic Algorithms, and an introduction to
+								data structures. The majority of this work was done in Python,
+								Scheme, and SQL.
+
+							</p>
 						</div>
 					</div>
 					<div class="clearfix"> </div>
@@ -231,15 +253,23 @@ $(document).ready(function() {
 						</div>
 						<div class="experience-grid-info">
 							<h5>Pioneers in Robotics Foundation</h5>
-							<p>I worked with a group on campus to develop Printed Circuit Boards for integration into Robotic development kits. These kits were ultimately designed for local robotics education and competition. </p>
+							<p>
+								I worked with a group on campus to develop Printed Circuit Boards
+								for integration into Robotic development kits. These kits were
+								ultimately designed for local robotics education and regional competitions.
+							</p>
 						</div>
-						<div class="col-md-6 experience-grid experience-grid2">
+					</div>
+					<div class="col-md-6 experience-grid experience-grid3">
 						<div class="experience-grid-icon icon-left hvr-radial-out">
-							<i class="fa fa-comments" aria-hidden="true"></i>
+							<i class="fa fa-asterisk" aria-hidden="true"></i>
 						</div>
 						<div class="experience-grid-info">
-							<h5>BioInformatics Analysis</h5>
-							<p> I am currently working on software to automate protein multi-domain architecture prediction using biologically-founded consensus approaches </p>
+							<h5>BioInformatics Analysis </h5>
+							<p>
+								I am currently working on software to automate protein multi-domain architecture
+								prediction using homology-based consensus approaches.
+							</p>
 						</div>
 					</div>
 					<div class="clearfix"> </div>
@@ -271,7 +301,7 @@ $(document).ready(function() {
 								</div>
 								<div class="clearfix"> </div>
 							</div>
-						</div>	
+						</div>
 					</div>
 					<div class="item">
 						<div class="feedback-info">
@@ -288,7 +318,7 @@ $(document).ready(function() {
 								</div>
 								<div class="clearfix"> </div>
 							</div>
-						</div>	
+						</div>
 					</div>
 					<div class="item">
 						<div class="feedback-info">
@@ -305,7 +335,7 @@ $(document).ready(function() {
 								</div>
 								<div class="clearfix"> </div>
 							</div>
-						</div>	
+						</div>
 					</div>
 					<div class="item">
 						<div class="feedback-info">
@@ -322,7 +352,7 @@ $(document).ready(function() {
 								</div>
 								<div class="clearfix"> </div>
 							</div>
-						</div>	
+						</div>
 					</div>
 				</div>
 			</div> -->
@@ -343,23 +373,24 @@ $(document).ready(function() {
 		<div class="container">
 			<div class="w3-agileits-statistics-heading experience-heading">
 				<h3>My Projects</h3>
+				<h4 align="center">Click on an image to learn a little more</h4>
 			</div>
 		</div>
 		<div class="bs-example bs-example-tabs" role="tabpanel" data-example-id="togglable-tabs">
 					<ul id="myTab" class="nav nav-tabs" role="tablist">
 						<li role="presentation" class="active"><a href="#home-main" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">All</a></li>
-						<li role="presentation"><a href="#learning" role="tab" id="learning-tab" data-toggle="tab" aria-controls="learning">Independent</a></li>
-						<li role="presentation"><a href="#playing" role="tab" id="playing-tab" data-toggle="tab" aria-controls="playing">CourseWork</a></li>
-						<li role="presentation"><a href="#painting" role="tab" id="painting-tab" data-toggle="tab" aria-controls="painting">Personal Attempts</a></li>
-						<li role="presentation"><a href="#school" role="tab" id="school-tab" data-toggle="tab" aria-controls="school">Other</a></li>
+						<li role="presentation"><a href="#learning" role="tab" id="learning-tab" data-toggle="tab" aria-controls="learning">Research</a></li>
+						<li role="presentation"><a href="#playing" role="tab" id="playing-tab" data-toggle="tab" aria-controls="playing">Coursework</a></li>
+						<li role="presentation"><a href="#painting" role="tab" id="painting-tab" data-toggle="tab" aria-controls="painting">Personal Trials</a></li>
 					</ul>
-					<div id="myTabContent" class="tab-content">
+		<div id="myTabContent" class="tab-content">
 						<div role="tabpanel" class="tab-pane fade in active" id="home-main" aria-labelledby="home-tab">
 							<div class="w3_tab_img">
 								<div class="col-md-3 w3_tab_img_left">
 									<div class="demo">
 										<a class="cm-overlay" href="images/p1.jpg">
-										  <figure class="imghvr-shutter-in-out-diag-2"><img src="images/p1.jpg" alt=" " class="img-responsive" />
+										  <figure class="imghvr-shutter-in-out-diag-2"><img src="images/p1.jpg" alt="Look" class="img-responsive">
+											  <figcaption> Using a skeleton framework, I designed a map program that used clustering algorithms to identify restaurant groupings in the local area. </figcaption>
 										  </figure>
 										</a>
 									</div>
@@ -420,6 +451,30 @@ $(document).ready(function() {
 										</a>
 									</div>
 								</div>
+								<div class="col-md-3 w3_tab_img_left">
+									<div class="demo">
+										<a class="cm-overlay" href="images/p9.jpg">
+											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p9.jpg" alt=" " class="img-responsive" />
+											</figure>
+										</a>
+									</div>
+								</div>
+								<div class="col-md-3 w3_tab_img_left">
+									<div class="demo">
+										<a class="cm-overlay" href="images/p10.jpg">
+											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p10.jpg" alt=" " class="img-responsive" />
+											</figure>
+										</a>
+									</div>
+								</div>
+								<div class="col-md-3 w3_tab_img_left">
+									<div class="demo">
+										<a class="cm-overlay" href="images/p11.jpg">
+											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p11.jpg" alt=" " class="img-responsive" />
+											</figure>
+										</a>
+									</div>
+								</div>
 								<div class="clearfix"> </div>
 							</div>
 						</div>
@@ -427,8 +482,16 @@ $(document).ready(function() {
 							<div class="w3_tab_img">
 								<div class="col-md-3 w3_tab_img_left">
 									<div class="demo">
-										<a class="cm-overlay" href="images/p6.jpg">
-											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p6.jpg" alt=" " class="img-responsive">
+										<a class="cm-overlay" href="images/p7.jpg">
+											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p7.jpg" alt=" " class="img-responsive">
+											</figure>
+										</a>
+									</div>
+								</div>
+								<div class="col-md-3 w3_tab_img_left">
+									<div class="demo">
+										<a class="cm-overlay" href="images/p8.jpg">
+											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p8.jpg" alt=" " class="img-responsive">
 											</figure>
 										</a>
 									</div>
@@ -437,6 +500,14 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p9.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p9.jpg" alt=" " class="img-responsive">
+											</figure>
+										</a>
+									</div>
+								</div>
+								<div class="col-md-3 w3_tab_img_left">
+									<div class="demo">
+										<a class="cm-overlay" href="images/p10.jpg">
+											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p10.jpg" alt=" " class="img-responsive">
 											</figure>
 										</a>
 									</div>
@@ -456,16 +527,8 @@ $(document).ready(function() {
 								</div>
 								<div class="col-md-3 w3_tab_img_left">
 									<div class="demo">
-										<a class="cm-overlay" href="images/p5.jpg">
-											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p5.jpg" alt=" " class="img-responsive">
-											</figure>
-										</a>
-									</div>
-								</div>
-								<div class="col-md-3 w3_tab_img_left">
-									<div class="demo">
-										<a class="cm-overlay" href="images/p7.jpg">
-											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p7.jpg" alt=" " class="img-responsive">
+										<a class="cm-overlay" href="images/p2.jpg">
+											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p2.jpg" alt=" " class="img-responsive">
 											</figure>
 										</a>
 									</div>
@@ -478,19 +541,27 @@ $(document).ready(function() {
 										</a>
 									</div>
 								</div>
+								<div class="col-md-3 w3_tab_img_left">
+									<div class="demo">
+										<a class="cm-overlay" href="images/p5.jpg">
+											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p5.jpg" alt=" " class="img-responsive">
+											</figure>
+										</a>
+									</div>
+								</div>
+								<div class="col-md-3 w3_tab_img_left">
+									<div class="demo">
+										<a class="cm-overlay" href="images/p6.jpg">
+											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p6.jpg" alt=" " class="img-responsive">
+											</figure>
+										</a>
+									</div>
+								</div>
 								<div class="clearfix"> </div>
 							</div>
 						</div>
 						<div role="tabpanel" class="tab-pane fade" id="painting" aria-labelledby="painting-tab">
 							<div class="w3_tab_img">
-								<div class="col-md-3 w3_tab_img_left">
-									<div class="demo">
-										<a class="cm-overlay" href="images/p2.jpg">
-											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p2.jpg" alt=" " class="img-responsive">
-											</figure>
-										</a>
-									</div>
-								</div>
 								<div class="col-md-3 w3_tab_img_left">
 									<div class="demo">
 										<a class="cm-overlay" href="images/p4.jpg">
@@ -501,8 +572,8 @@ $(document).ready(function() {
 								</div>
 								<div class="col-md-3 w3_tab_img_left">
 									<div class="demo">
-										<a class="cm-overlay" href="images/p10.jpg">
-											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p10.jpg" alt=" " class="img-responsive">
+										<a class="cm-overlay" href="images/p11.jpg">
+											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p11.jpg" alt=" " class="img-responsive">
 											</figure>
 										</a>
 									</div>
@@ -536,11 +607,7 @@ $(document).ready(function() {
 
 	</div>
 	<!-- //projects -->
-	<!-- map -->
-	<div class="map-grid">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100949.24429313939!2d-122.44206553967531!3d37.75102885910819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan+Francisco%2C+CA%2C+USA!5e0!3m2!1sen!2sin!4v1472190196783" class="map" style="border:0" allowfullscreen=""></iframe>
-	</div>
-	<!-- //map -->
+
 	<!-- contact -->
 	<div class="contact" id="contact">
 		<div class="container">
@@ -556,15 +623,15 @@ $(document).ready(function() {
 							<span></span>
 						</div>
 						<div class="styled-input agile-styled-input-top">
-							<input type="text" name="Phone" required=""> 
+							<input type="text" name="Phone" required="">
 							<label>Phone</label>
 							<span></span>
 						</div>
 						<div class="styled-input">
-							<input type="text" name="Email" required=""> 
+							<input type="text" name="Email" required="">
 							<label>Email</label>
 							<span></span>
-						</div> 
+						</div>
 						<div class="styled-input">
 							<input type="text" name="Subject" required="">
 							<label>Subject</label>
@@ -576,13 +643,29 @@ $(document).ready(function() {
 						<textarea name="Message" required=""></textarea>
 						<label>Message</label>
 						<span></span>
-					</div>	 
+					</div>
 					<input type="submit" value="SEND">
 				</form>
 			</div>
 		</div>
 	</div>
+
+
+
+
 	<!-- //contact -->
+		<!-- map -->
+	<div class="map-grid">
+		<iframe
+		  width="350"
+		  height="250"
+		  frameborder="0" style="border:0"
+		  src="https://www.google.com/maps/embed/v1/streetview?key=AIzaSyC7yf2Z1mebDybpIbTb5bYzaU5G1XDnotc&location=37.872444, -122.257962&heading=180&pitch=30&fov=90"
+		  allowfullscreen>
+		</iframe>
+	</div>
+	<!-- //map -->
+
 	<!-- copyright -->
 	<div class="agileits-w3layouts-footer">
 		<div class="container">
@@ -591,6 +674,6 @@ $(document).ready(function() {
 	</div>
 	<!-- //copyright -->
 	<script src="js/bars.js"></script>
-	<script src="js/owl.carousel.js"></script> 
-</body>	
+	<script src="js/owl.carousel.js"></script>
+</body>
 </html>
