Updated website with captions

--- a/index.html
+++ b/index.html
@@ -390,7 +390,11 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p1.jpg">
 										  <figure class="imghvr-shutter-in-out-diag-2"><img src="images/p1.jpg" alt="Look" class="img-responsive">
-											  <figcaption> Using a skeleton framework, I designed a map program that used clustering algorithms to identify restaurant groupings in the local area. </figcaption>
+											  <figcaption>
+												  Using a skeleton framework, I designed a map program that
+												  used k-means clustering
+												  to identify restaurant groupings in the local area
+											  </figcaption>
 										  </figure>
 										</a>
 									</div>
@@ -399,6 +403,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p2.jpg">
 										  <figure class="imghvr-shutter-in-out-diag-2"><img src="images/p2.jpg" alt=" " class="img-responsive" />
+											  <figcaption>
+												  An object oriented game designed to replicate
+												  the functionality of Plants vs. Zombies
+											  </figcaption>
 										  </figure>
 										</a>
 									</div>
@@ -407,6 +415,9 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p3.jpg">
 										  <figure class="imghvr-shutter-in-out-diag-2"><img src="images/p3.jpg" alt=" " class="img-responsive" />
+											  <figcaption>
+												  A Scheme Language Interpreter built in Python
+											  </figcaption>
 											</figure>
 										</a>
 									</div>
@@ -415,6 +426,9 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p4.jpg">
 										  <figure class="imghvr-shutter-in-out-diag-2"><img src="images/p4.jpg" alt=" " class="img-responsive" />
+											  <figcaption>
+												  A recursive art design built using the Python Turtle Module
+											  </figcaption>
 										</figure>
 										</a>
 									</div>
@@ -423,6 +437,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p5.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p5.jpg" alt=" " class="img-responsive" />
+												<figcaption>
+													A code-based replication of the Enigma Machine used
+													to encrypt messages in World War 2
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -431,6 +449,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p6.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p6.jpg" alt=" " class="img-responsive" />
+												<figcaption>
+													Implementing a game tree to evaluate the optimal
+													combination of moves
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -439,6 +461,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p7.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p7.jpg" alt=" " class="img-responsive" />
+												<figcaption>
+													Using a data from neuroimaging literature to map
+													neural activity
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -447,6 +473,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p8.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p8.jpg" alt=" " class="img-responsive" />
+												<figcaption>
+													Using Jquery and database design to generate
+													Brainspell homepage
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -455,6 +485,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p9.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p9.jpg" alt=" " class="img-responsive" />
+												<figcaption>
+													Parsing the UniProt Database to discover homology relationships
+													between proteins
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -463,6 +497,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p10.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p10.jpg" alt=" " class="img-responsive" />
+												<figcaption>
+													Analyzing protein Multi-Domain Architecture by generating
+													orthology matrices
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -471,6 +509,9 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p11.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p11.jpg" alt=" " class="img-responsive" />
+												<figcaption>
+													Learning iOS Development through the creation of a calculator app
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -484,6 +525,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p7.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p7.jpg" alt=" " class="img-responsive">
+												<figcaption>
+													Using a data from neuroimaging literature to map
+													neural activity
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -492,6 +537,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p8.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p8.jpg" alt=" " class="img-responsive">
+												<figcaption>
+													Using Jquery and database design to generate
+													Brainspell homepage
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -500,6 +549,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p9.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p9.jpg" alt=" " class="img-responsive">
+												<figcaption>
+													Parsing the UniProt Database to discover homology relationships
+													between proteins
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -508,6 +561,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p10.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p10.jpg" alt=" " class="img-responsive">
+												<figcaption>
+													Analyzing protein Multi-Domain Architecture by generating
+													orthology matrices
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -521,6 +578,11 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p1.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p1.jpg" alt=" " class="img-responsive">
+												<figcaption>
+												  Using a skeleton framework, I designed a map program that
+												  used k-means clustering
+												  to identify restaurant groupings in the local area
+											  </figcaption>
 											</figure>
 										</a>
 									</div>
@@ -529,6 +591,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p2.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p2.jpg" alt=" " class="img-responsive">
+												<figcaption>
+												  An object oriented game designed to replicate
+												  the functionality of Plants vs. Zombies
+											  </figcaption>
 											</figure>
 										</a>
 									</div>
@@ -537,6 +603,9 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p3.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p3.jpg" alt=" " class="img-responsive">
+												<figcaption>
+												  A Scheme Language Interpreter built in Python
+											  </figcaption>
 											</figure>
 										</a>
 									</div>
@@ -545,6 +614,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p5.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p5.jpg" alt=" " class="img-responsive">
+												<figcaption>
+													A code-based replication of the Enigma Machine used
+													to encrypt messages in World War 2
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -553,6 +626,10 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p6.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p6.jpg" alt=" " class="img-responsive">
+												<figcaption>
+													Implementing a game tree to evaluate the optimal
+													combination of moves
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -566,6 +643,9 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p4.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p4.jpg" alt=" " class="img-responsive">
+												<figcaption>
+												  A recursive art design built using the Python Turtle Module
+											  </figcaption>
 											</figure>
 										</a>
 									</div>
@@ -574,6 +654,9 @@ $(document).ready(function() {
 									<div class="demo">
 										<a class="cm-overlay" href="images/p11.jpg">
 											<figure class="imghvr-shutter-in-out-diag-2"><img src="images/p11.jpg" alt=" " class="img-responsive">
+												<figcaption>
+													Learning iOS Development through the creation of a calculator app
+												</figcaption>
 											</figure>
 										</a>
 									</div>
@@ -607,7 +690,6 @@ $(document).ready(function() {
 
 	</div>
 	<!-- //projects -->
-
 	<!-- contact -->
 	<div class="contact" id="contact">
 		<div class="container">
@@ -615,7 +697,7 @@ $(document).ready(function() {
 				<h3>Contact Me</h3>
 			</div>
 			<div class="contact-form">
-				<form action="#" method="post">
+				<form action="main.py" method="post">
 					<div class="fields-grid">
 						<div class="styled-input agile-styled-input-top">
 							<input type="text" name="Full Name" required="">
