--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ $(document).ready(function() {
 			</div>
 			<div class="w3l-banner-grids">
 				<div class="col-md-8 w3ls-banner-right">
-					<div class="banner-right-img">
-						<img src="images/1.jpg" alt="" />
-					</div>
+					<!--<div class="banner-right-img">-->
+						<!--<img src="images/1.jpg" alt="" />-->
+					<!--</div>-->
 					<div class="banner-right-info">
 						<h2>Welcome. I am currently a Computer Science Student at the University of California Berkeley. I've showcased some of my work here, feel free to take a look around. </h2>
 						<p>I'm going to add more relevant information here/ or something cool when I figure out what that is.</p>
