--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@ $(document).ready(function() {
 					</div>
 					<div class="w3ls-banner-left-info">
 						<h4>Email Address</h4>
-						<p><a href="mailto:example@email.com">sharabesh@berkeley.edu</a></p>
+						<p>
+							<a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#115;&#104;&#97;&#114;&#97;&#98;&#101;&#115;&#104;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;">&#83;&#104;&#97;&#114;&#97;&#98;&#101;&#115;&#104;</a>
+						</p>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
