Added redirect message to heroku

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html> 
 <head>
-	<meta http-equiv="refresh" content="0; url=https://sharabesh.herokuapp.com"/>
+	<meta http-equiv="refresh" content="0; url=https://sharabesh.me"/>
 </head>
 <body>
-	<a href="https://sharabesh.herokuapp.com">Click here if not redirected</a>
+	<a href="https://sharabesh.me">Click here if not redirected</a>
+	<p>This Website is currently hosted on Heroku's Application Servers.</p>
 </body>
 </html> 
